--- a/email.html
+++ b/email.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <styles>
+  <style>
     :root {
         --primary: #007bff;
         --secondary: #6c757d;
@@ -46,11 +46,32 @@
         max-width: 66.666667%;
     }
 
-    .mt-5,
-    my-5 {
-    margin-top: 3rem !important;
+    .my-5 {
+        margin-top: 3rem !important;
     }
-   </styles>
+
+    .p-5 {
+        padding: 3rem !important;
+    }
+
+    .bg-secondary {
+        background-color: #6c757d !important;
+    }
+
+    .bg-dark {
+        background-color: #343a40 !important;
+    }
+
+    .bg-light {
+        background-color: #f8f9fa !important;
+    }
+
+    .lead {
+       font-size: 1.25rem;
+       font-weight: 300;
+    }
+
+   </style>
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
