--- a/email.html
+++ b/email.html
@@ -51,14 +51,16 @@
                         <h3 style= "font-family: sans-serif;"> This message requires your immediate attention!</h3>
                     </div>
 
-                    <div style= "font-family: sans-serif; Margin:10px 400px 30px 400px;">
+                    <div style= "font-family: sans-serif; Margin:10px 10px 30px 40px;">
                         <br>
                         <br>
-                        <p align="left">Hello,  </p>
-                        <p align="left">This is an automatic email from Expersoft SSH Key Administrator.</p>
-                        <p>Please generate a new SSH key-pair, following the instruction link here.</p>
-                        <p>Access to the remote machines will be lost in one week.</p>
-                        <p>For additional info, please contact: </p>
+                        <div align="left">
+                            <p>Hello,</p>
+                            <p >This is an automatic email from Expersoft SSH Key Administrator.</p>
+                            <p>Please generate a new SSH key-pair, following the instruction link here.</p>
+                            <p>Access to the remote machines will be lost in one week.</p>
+                            <p>For additional info, please contact: </p>
+                        </div>
                         <br>
                     </div>
                 </div>
