--- a/email.html
+++ b/email.html
@@ -51,10 +51,10 @@
                         <h3 style= "font-family: sans-serif;"> This message requires your immediate attention!</h3>
                     </div>
 
-                    <div style= "font-family: sans-serif; Margin:10px 10px 30px 40px;">
+                    <div style= "font-family: sans-serif; Margin:10px 100px 30px 100x;">
                         <br>
                         <br>
-                        <div align="left">
+                        <div justify="left">
                             <p>Hello,</p>
                             <p >This is an automatic email from Expersoft SSH Key Administrator.</p>
                             <p>Please generate a new SSH key-pair, following the instruction link here.</p>
