--- a/email.html
+++ b/email.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div align="center">
-                    <div align="center">
+                    <div>
                         <br>
                         <br>
                         <h3 style= "font-family: sans-serif;"> This message requires your immediate attention!</h3>
@@ -54,7 +54,7 @@
                     <div style= "font-family: sans-serif; Margin:10px 100px 30px 100x;">
                         <br>
                         <br>
-                        <div justify="left">
+                        <div>
                             <p>Hello,</p>
                             <p >This is an automatic email from Expersoft SSH Key Administrator.</p>
                             <p>Please generate a new SSH key-pair, following the instruction link here.</p>
@@ -69,7 +69,13 @@
 
             <br>
             <br>
-
-        <hr style= "height:100px; width:100%; border-width:0; color:#181826 ; background-color:#181826 ;"> 
+        <div>
+            <hr style= "height:100px; width:100%; border-width:0; color:#181826 ; background-color:#181826 ;"> 
+            <p class="footer">1000 Street Road My City, My State 19000</p>
+            <br>
+            &copy; w3newbie, 2017.
+            <br>       
+        </div>
+        
     </body>
 </html>
