--- a/email.html
+++ b/email.html
@@ -71,13 +71,17 @@
             <br>
             <br>
         
-            <table style= "height:100px; width:100%; border-width:0; color:#212F3D; background-color:#212F3D;">
+            <table style= "height:100px; width:100%; border-width:0; color:#181826; background-color:#181826;">
     			<tr>
-    				<td style="text-align: justify;">
+    				<td style="text-align: center; font-family: sans-serif;">
     					<table width="100%">
     						<tr>
     							<td>
-    								<p>1000 Street Road My City, My State 19000<br>&copy; w3newbie, 2017.<br></p>
+    								<p> Hinterbergstrasse 20, 6312 Steinhausen</p>
+                                    <br>
+                                    &copy; Expersoft AG, 2022.
+                                    <br>
+                                    <br>
     							</td>
     						</tr>
     					</table>
