--- a/email.html
+++ b/email.html
@@ -72,13 +72,13 @@
             <br>
         
             <table style= "height:100px; width:100%; border-width:0; color:#181826; background-color:#181826;">
-    			<tr>
-    				<td style="text-align: center; font-family: sans-serif;">
+    			<tr align="center">
+    				<td style=" font-family: sans-serif;">
     					<table width="100%">
     						<tr>
     							<td>
-    								<p> Hinterbergstrasse 20, 6312 Steinhausen</p>
                                     <br>
+    								<p> Hinterbergstrasse 20, 6312 Steinhausen</p>
                                     &copy; Expersoft AG, 2022.
                                     <br>
                                     <br>
