--- a/email.html
+++ b/email.html
@@ -72,16 +72,19 @@
             <br>
         
             <table style= "height:100px; width:100%; border-width:0; color:#181826; background-color:#181826;">
-    			<tr align="center">
+    			<tr >
     				<td style=" font-family: sans-serif;">
     					<table width="100%">
     						<tr>
     							<td>
-                                    <br>
-    								<p> Hinterbergstrasse 20, 6312 Steinhausen</p>
-                                    &copy; Expersoft AG, 2022.
-                                    <br>
-                                    <br>
+                                    <div align="center">
+                                        <br>
+    								    <p> Hinterbergstrasse 20, 6312 Steinhausen</p>
+                                        &copy; Expersoft AG, 2024.
+                                        <br>
+                                        <br>
+                                    </div>
+                                    
     							</td>
     						</tr>
     					</table>
