--- a/email.html
+++ b/email.html
@@ -69,15 +69,14 @@
                         <br>
                         <div>
                             <p>Hello,</p>
-                            <p >This is an automatic email from Expersoft SSH Key Administrator.</p>
-                            <p>Please generate a new SSH key-pair, following the instruction link here.</p>
-                            <p>Access to the remote machines will be lost in one week.</p>
-                            <p>For additional info, please contact: </p>
+                            <p>This is an automatic email from Expersoft.</p>
+                            <p>Please generate a new SSH key-pair following the instruction linked here ().</p>
+                            <p>Please be informed that access to the remote machines will be lost in one week.</p>
+                            <p>For additional info, please contact: () </p>
                         </div>
                         <br>
                     </div>
                 </div>
-
             </div>
 
             <br>
