--- a/email.html
+++ b/email.html
@@ -72,7 +72,7 @@
                             <p>This is an automatic email from Expersoft.</p>
                             <p>Please generate a new SSH key-pair following the instruction linked here ().</p>
                             <p>Please be informed that access to the remote machines will be lost in one week.</p>
-                            <p>For additional info, please contact: () </p>
+                            <p>For additional information, please contact: () </p>
                         </div>
                         <br>
                     </div>
