--- a/email.html
+++ b/email.html
@@ -69,7 +69,7 @@
                         <br>
                         <div>
                             <p>Hello,</p>
-                            <p>This is an automatic email from Expersoft.</p>
+                            <p>This is an automatic email from Expersoft Systems AG.</p>
                             <p>Please generate a new SSH key-pair following the instruction linked here ().</p>
                             <p>Please be informed that access to the remote machines will be lost in one week.</p>
                             <p>For additional information, please contact: () </p>
@@ -91,7 +91,7 @@
                                     <div align="center">
                                         <br>
     								    <p> Hinterbergstrasse 20, 6312 Steinhausen</p>
-                                        &copy; Expersoft AG, 2023.
+                                        &copy; Expersoft Systems AG, 2023.
                                         <br>
                                         <br>
                                     </div>
